update users endpoint documentation using swagger
