# docs/swagger.yaml
@@ -12,6 +12,15 @@ definitions:
     - password
     - username
     type: object
+  api.updateUserRequestData:
+    properties:
+      email:
+        type: string
+      password:
+        type: string
+      username:
+        type: string
+    type: object
   api.userResponse:
     properties:
       createdAt:
@@ -19,6 +28,32 @@ definitions:
       email:
         type: string
       id:
+        type: string
+      username:
+        type: string
+    type: object
+  db.ListUsersRow:
+    properties:
+      created_at:
+        type: string
+      email:
+        type: string
+      id:
+        type: string
+      username:
+        type: string
+    type: object
+  db.User:
+    properties:
+      created_at:
+        type: string
+      email:
+        type: string
+      id:
+        type: string
+      password:
+        type: string
+      updated_at:
         type: string
       username:
         type: string
@@ -49,6 +84,92 @@ paths:
       tags:
       - user
       - create
+  /user/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete the user register
+      parameters:
+      - description: id
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+      summary: Delete User
+      tags:
+      - user
+      - delete
+    get:
+      consumes:
+      - application/json
+      description: Recive the one user information from a id
+      parameters:
+      - description: id
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/db.User'
+      summary: Get a User
+      tags:
+      - user
+      - get
+    put:
+      consumes:
+      - application/json
+      description: Update the user information
+      parameters:
+      - description: id
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: User Data
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/api.updateUserRequestData'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.userResponse'
+      summary: Update User
+      tags:
+      - user
+      - update
+  /users:
+    get:
+      consumes:
+      - application/json
+      description: Recive all users
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/db.ListUsersRow'
+      summary: List Users
+      tags:
+      - user
+      - list
 securityDefinitions:
   JWT:
     in: header
